# avr-autobiome

./: README  configure.ac
autobiome/: adc_input.h  init.h  startup.hpp  startup.hxx  wheatstone.hxx
doc/: NOTES.txt  observed_data.ods
m4/: avr.m4  avr_defaults.m4
src/: biome.cxx  init.S  logger.S  wheatstone.cxx
trunk/: AUTHORS  ChangeLog  Makefile.am  README
trunk/autobiome/: asm_defs.h  biome.hxx  init.h  outlogger.h  wheatstone.hxx
trunk/doc/: observed_data.ods
trunk/m4/: avr.m4
trunk/src/: biome.cxx  main.cxx  read_adc.S  startup.cxx  wheatstone.cxx
trunk/steinhart/: Steinhart.cxx  Steinhart.hxx  main.cxx
